refactored MemoryStream method names and added recency sum